collapse arrow color fixed

--- a/designer/client/src/stylesheets/togglePanel.styl
+++ b/designer/client/src/stylesheets/togglePanel.styl
@@ -10,6 +10,7 @@
   transition: left 0.5s ease, right 0.5s ease;
   z-index: 100
   cursor: pointer
+  color: black
 
   &.RIGHT
     right: 0
